added consultant class

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,11 @@
 	<div class="container">
         <div th:insert="fragments/sections.html :: header"> </div>
         <br/>
+        <br/>
+        <div style="text-align: center;"> Welcome to Travers Consulting Time Tracking & Expense System </div>
+        <br/>
+        <br/>
+        <div style="text-align: center;"> Consultants, Please enter your time and expenses under the "Time Sheet" tab for Dr. Travers Approval </div>
         <div>
 
         </div>
