--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                id="password" name="password" class="form-control" size="40"/> <br />
         <button class="tcui-login-icon ui-button ui-corner-all ui-widget" name="Submit" value="Login" type="Submit" th:text="Login"></button>
         <div align="center" th:if="${param.error}">
-            <p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
+            <p style="font-size: 25px; color: #FF1C19;">Email or Password invalid, please verify</p>
         </div>
     </form>
 </div>
