added timesheet button and change website title page names

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
                     <table class="table100w">
                         <tr>
                             <td align="left" width="250px"><img src="/images/TC-Logo.png" height="80px"></td>
-                            <td><H1 class="center" th:text="#{website.title}" /></td>
+                            <td><H1 class="center">Login</H1></td>
                             <td align="right" width="250px">&nbsp;</td>
                         </tr>
                     </table>
