changed title of a button

--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -41,8 +41,8 @@
                     <button type="button" id="home" class="tcui-home-icon" title="Home">
                         Home
                     </button>
-                    <button type="button" id="timesheet" class="tcui-time-icon" title="Home">
-                        TimeSheet
+                    <button type="button" id="timesheet" class="tcui-time-icon" title="Consultants Timesheets">
+                       Consultants TimeSheet
                     </button>
                 </td>
 
