changed title of a button

--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -69,7 +69,7 @@
                 window.open("/admin/users", "_self");
             });
             $("#timesheet").button().on("click", function(){
-                window.open("/timesheet", "_self");
+                window.open("/admin/timesheet_steveview", "_self");
             });
         </script>
     </header>
