I added table headers for timesheet

--- a/src/main/resources/templates/admin/timesheet_steveview.html
+++ b/src/main/resources/templates/admin/timesheet_steveview.html
@@ -24,6 +24,9 @@
                 {"sTitle": "ID", "mData": "ID"},
                 {"sTitle": "First Name", "mData": "FirstName"},
                 {"sTitle": "Last Name", "mData": "LastName"},
+                {"sTitle": "Date", "mData": "Date"},
+                {"sTitle": "Time In", "mData": "timeIn"},
+                {"sTitle": "Time Out", "mData": "timeOut"},
                 {"sTitle": "Billed", "mData": "Billed"},
                 {"sTitle": "Paid", "mData": "Paid"},
                 {"sTitle": "Notes", "mData": "Notes"}
