--- a/src/main/resources/templates/admin/timesheet_steveview.html
+++ b/src/main/resources/templates/admin/timesheet_steveview.html
@@ -36,7 +36,7 @@
                 "dom": '<"top"if>rt<"bottom"lp><"clear">',
                 "iDisplayLength": 10,
                 "bProcessing": true,
-                "sAjaxSource": '/api/timesheet/list',
+                "sAjaxSource": '/api/timesheets/list',
                 "aoColumns": timesheetColumns,
                 "aaSorting": [],
                 "deferRender": true,
