Changed timesheet to uppercase and web page tag

--- a/src/main/resources/templates/admin/timesheet_steveview.html
+++ b/src/main/resources/templates/admin/timesheet_steveview.html
@@ -207,7 +207,7 @@
 <div class="container">
     <div th:insert="fragments/sections.html :: header"> </div>
     <br/>
-    <table id ='timesheetLabel'><tr style="vertical-align:middle"><td style="font-weight: bold;font-size: 18px;color: darkblue">timesheet</td><td>&nbsp;<button id="add_timesheet_action" class="tcui-add-icon" title="Add">&nbsp;</button></td></tr></table>
+    <table id ='timesheetLabel'><tr style="vertical-align:middle"><td style="font-weight: bold;font-size: 18px;color: darkblue">Timesheet</td><td>&nbsp;<button id="add_timesheet_action" class="tcui-add-icon" title="Add">&nbsp;</button></td></tr></table>
     <table id="timesheetTable" class="hover" width="100%"></table>
 
     <div id="dialog-form-timesheet" title="Create timesheet ">
